--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ channels:
 dependencies:
 - certifi=2018.1.18=py36_0
 - ipykernel=4.8.2=py36_0
-- pandas=0.22.0=py36h6538335_0
+- pandas=0.22.0=py36_0
 - pip=9.0.3=py36_0
 - python=3.6.5=h0c2934d_0
 - python-dateutil=2.7.2=py36_0
@@ -13,7 +13,7 @@ dependencies:
 - vc=14=h0510ff6_3
 - vs2015_runtime=14.0.25420=0
 - wheel=0.31.0=py36_0
-- wincertstore=0.2=py36h7fe50ca_0
+- wincertstore=0.2=py36_0
 - pip:
   - ipython-genutils==0.2.0
   - jupyter-client==5.2.3
